# plot-flow

./: .gitignore  README.md  main.py  pyproject.toml
plotflow/: __init__.py  decorator.py  graph.py  plotter.py  registry.py
test/: test_example_flow.py
test/notebooks/: iris.ipynb
